gradle jar dependsOn test

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,15 @@ dependencies {
     compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
 }
 
+test {
+    testLogging {
+        // Show that tests are run in the command-line output
+        events 'started', 'passed'
+    }
+}
+
 jar {
+    dependsOn test
     from{
         configurations.runtime.collect{zipTree(it)}
     }
